// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FLOAT_DISPLAY correctly with default value to N/A 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "FLOAT_DISPLAY",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <DisplayUnitValue
    value="N/A"
  >
    <DisplayUnitValue__Container>
      <div
        className="DisplayUnitValue__Container-fOKEIX dDKurw"
      >
        <DisplayUnitValue__StyledHeading
          color="primary"
        >
          <Heading
            className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr"
            color="primary"
            level={1}
          >
            <H
              className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr Heading__Heading-bbmQNS bzctpr"
              color="primary"
              level={1}
            >
              <h1
                className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr Heading__Heading-bbmQNS bzctpr"
                color="primary"
              >
                N/A
              </h1>
            </H>
          </Heading>
        </DisplayUnitValue__StyledHeading>
      </div>
    </DisplayUnitValue__Container>
  </DisplayUnitValue>
</DataChannelAdapter>
`;

exports[`should render FLOAT_DISPLAY correctly with unit 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "unit": "攝氏",
      },
      "id": "id",
      "type": "FLOAT_DISPLAY",
      "values": Object {
        "value": 1.3,
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayUnitValue
    unit="攝氏"
    value={1.3}
  >
    <DisplayUnitValue__Container>
      <div
        className="DisplayUnitValue__Container-fOKEIX dDKurw"
      >
        <DisplayUnitValue__StyledHeading
          color="primary"
        >
          <Heading
            className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr"
            color="primary"
            level={1}
          >
            <H
              className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr Heading__Heading-bbmQNS bzctpr"
              color="primary"
              level={1}
            >
              <h1
                className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr Heading__Heading-bbmQNS bzctpr"
                color="primary"
              >
                1.3
              </h1>
            </H>
          </Heading>
        </DisplayUnitValue__StyledHeading>
        <DisplayUnitValue__StyledP
          color="grayBase"
        >
          <P
            className="DisplayUnitValue__StyledP-ceNPmY iawlaJ"
            color="grayBase"
          >
            <Component
              className="DisplayUnitValue__StyledP-ceNPmY iawlaJ P__P-KJbCR kHKeHO"
              color="grayBase"
            >
              <p
                className="DisplayUnitValue__StyledP-ceNPmY iawlaJ P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                攝氏
              </p>
            </Component>
          </P>
        </DisplayUnitValue__StyledP>
      </div>
    </DisplayUnitValue__Container>
  </DisplayUnitValue>
</DataChannelAdapter>
`;

exports[`should render FLOAT_DISPLAY correctly with value 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "FLOAT_DISPLAY",
      "values": Object {
        "value": 1.1,
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayUnitValue
    value={1.1}
  >
    <DisplayUnitValue__Container>
      <div
        className="DisplayUnitValue__Container-fOKEIX dDKurw"
      >
        <DisplayUnitValue__StyledHeading
          color="primary"
        >
          <Heading
            className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr"
            color="primary"
            level={1}
          >
            <H
              className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr Heading__Heading-bbmQNS bzctpr"
              color="primary"
              level={1}
            >
              <h1
                className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr Heading__Heading-bbmQNS bzctpr"
                color="primary"
              >
                1.1
              </h1>
            </H>
          </Heading>
        </DisplayUnitValue__StyledHeading>
      </div>
    </DisplayUnitValue__Container>
  </DisplayUnitValue>
</DataChannelAdapter>
`;

exports[`should render FLOAT_DISPLAY correctly with zero 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "FLOAT_DISPLAY",
      "values": Object {
        "value": 0,
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayUnitValue
    value={0}
  >
    <DisplayUnitValue__Container>
      <div
        className="DisplayUnitValue__Container-fOKEIX dDKurw"
      >
        <DisplayUnitValue__StyledHeading
          color="primary"
        >
          <Heading
            className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr"
            color="primary"
            level={1}
          >
            <H
              className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr Heading__Heading-bbmQNS bzctpr"
              color="primary"
              level={1}
            >
              <h1
                className="DisplayUnitValue__StyledHeading-kRatpm hdCZyr Heading__Heading-bbmQNS bzctpr"
                color="primary"
              >
                0
              </h1>
            </H>
          </Heading>
        </DisplayUnitValue__StyledHeading>
      </div>
    </DisplayUnitValue__Container>
  </DisplayUnitValue>
</DataChannelAdapter>
`;
